--- a/src/TwitchCommander/TwitchCommander.csproj
+++ b/src/TwitchCommander/TwitchCommander.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Azure.Data.Tables" Version="3.0.0-beta.3" />
     <PackageReference Include="TwitchLib" Version="3.1.1" />
   </ItemGroup>
