Base functionality for bot timers working

--- a/src/TwitchCommander/TwitchCommander.csproj
+++ b/src/TwitchCommander/TwitchCommander.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TableEntities\" />
+    <ProjectReference Include="..\TwitchBot\TwitchBot.csproj" />
   </ItemGroup>
 
 </Project>
