Build up of code to support alerts

--- a/src/TwitchCommanderApp/TwitchCommanderApp.csproj
+++ b/src/TwitchCommanderApp/TwitchCommanderApp.csproj
@@ -47,6 +47,9 @@
   
 
   <ItemGroup>
+    <None Update="Settings\AlertSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Settings\AppSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
